[package]
name = "zettelkasten"
version = "0.1.0"
authors = ["Auke Willem Oosterhoff <aukewillem.oosterhoff@mobilityhouse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.20"
clap = "3.0.0-beta.2"
petgraph = { version = "0.5.1", features = ["serde-1"]}
skim = "0.9.3"
